[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/main menu/button blue.png" type="Texture" id=1]
[ext_resource path="res://UI/main menu/jbCNvTM4gwr2qV8X8fW3ZB-320-80.png" type="Texture" id=2]
[ext_resource path="res://asset/PixelFJ.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/main menu/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 130.0
margin_top = 44.0
margin_right = 190.0
margin_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="TextureButton" parent="Menu"]
margin_right = 60.0
margin_bottom = 20.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Label" type="Label" parent="Menu/Button1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="Menu"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Label" type="Label" parent="Menu/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Load"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TextureButton" parent="Menu"]
margin_top = 48.0
margin_right = 60.0
margin_bottom = 68.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Label" type="Label" parent="Menu/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Setting"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="TextureButton" parent="Menu"]
margin_top = 72.0
margin_right = 60.0
margin_bottom = 92.0
size_flags_horizontal = 3
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Label" type="Label" parent="Menu/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Menu/Button1" to="." method="_on_Button1_button_up"]
[connection signal="button_up" from="Menu/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="Menu/Button3" to="." method="_on_Button3_button_up"]
[connection signal="button_up" from="Menu/Button4" to="." method="_on_Button4_button_up"]
